large_exp_results/mythril/0xb94b43bc589898f8ce5405e4e7809b0d131a967c.sol/report
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

/tmp/0xb94b43bc589898f8ce5405e4e7809b0d131a967c.sol:84:1: SyntaxError: Source file requires different compiler version (current compiler is 0.5.0+commit.1d4f565a.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity =0.5.16;
^----------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.5.16"

